[package]
name = "rsm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-crypto = "0.2"
serde = "1.0"
serde_json = "1.0"
clap = "3.0"

[dependencies.rusqlite]
version = "0.30.0"
features = ["bundled-sqlcipher"]